added access and auth apies
