# internal/model/user.go
@@ -9,7 +9,7 @@ import (
 
 type User struct {
 	Id        int64
-	Name      string
+	Username  string
 	Email     string
 	Role      Role
 	CreatedAt time.Time
@@ -17,17 +17,28 @@ type User struct {
 }
 
 type UserToCreate struct {
-	Name     string
-	Email    string
-	Password string
-	Role     Role
+	Username        string
+	Email           string
+	Password        string
+	ConfirmPassword string
+	Role            Role
 }
 
 type UserToUpdate struct {
-	Id    int64
-	Name  *wrapperspb.StringValue
-	Email *wrapperspb.StringValue
-	Role  Role
+	Id       int64
+	Username *wrapperspb.StringValue
+	Email    *wrapperspb.StringValue
+	Role     Role
+}
+
+type UserToLogin struct {
+	Username string
+	Password string
+}
+
+type UserForToken struct {
+	Username string `json:"username"`
+	Role     Role   `json:"role"`
 }
 
 type Role int32
