# pkg/swagger/api.swagger.json
@@ -182,7 +182,7 @@
     "user_v1CreateRequest": {
       "type": "object",
       "properties": {
-        "name": {
+        "username": {
           "type": "string"
         },
         "email": {
@@ -215,7 +215,7 @@
           "type": "string",
           "format": "int64"
         },
-        "name": {
+        "username": {
           "type": "string"
         },
         "email": {
